# libmctp

./: .gitignore  .upstream-base-commit  CMakeLists.txt  Makefile.am  alloc.c  astlpc.c  astpcie.c  astpcie.h  astspi.c  astspi.h  config.h.in  configure.ac  core.c  crc32c.c  dbus_log_event.c  dbus_log_event.h  glacier-spb-ap.c  glacier-spb-ap.h  libmctp-alloc.h  libmctp-astlpc.h  libmctp-astpcie.h  libmctp-astspi.h  libmctp-externals.h  libmctp-log.h  libmctp-serial.h  libmctp-smbus.h  libmctp-usb.h  libmctp.h  log.c  mctp-i2c-ctrl  mctp-json.c  mctp-json.h  mctp-list-eps  mctp-pcie-ctrl  mctp-socket.c  mctp-socket.h  mctp-spi-ctrl  mctp-usb-ctrl  meson.build  meson_options.txt  (+4 more)
cfg_files/: hw_cfg.json  mctp-ctrl-emu.json
ctrld/: README  dbus_log_event.c  dbus_log_event.h  fsdyn-endpoint.c  fsdyn-endpoint.h  mctp-ctrl-cmdline.h  mctp-ctrl-cmds.h  mctp-ctrl-log.h  mctp-ctrl-spi.c  mctp-ctrl-spi.h  mctp-ctrl.c  mctp-ctrl.h  mctp-discovery-common.c  mctp-discovery-common.h  mctp-discovery-i2c.c  mctp-discovery-i2c.h  mctp-discovery.c  mctp-discovery.h  mctp-encode.c  mctp-encode.h  mctp-sdbus.c  mctp-sdbus.h  mctp-socket.c  mctp-socket.h  mctp-spi-cmds.c  mctp-spi-cmds.h  meson.build
ctrld-spi/: README  ast-rwspi.c  ast-rwspi.h  glacier-spb-ap.c  glacier-spb-ap.h  mctp-ctrl-cmdline.h  mctp-ctrl-cmds.h  mctp-ctrl-log.h  mctp-ctrl.h  mctp-spi-cmds.c  mctp-spi-ctrl-cmdline.h  mctp-spi-ctrl-cmds.h  mctp-spi-ctrl.c  mctp-spi-ctrl.h  mctp-spi-gpio.c  mctp-spi-gpio.h  mctp-spi-test.c
ctrld/fuzz-test/: config.json  mctp-ctrl-mockup.c  nic_cfg.json
linux/: aspeed-mctp.h
systemd/system/: mctp-ctrl.service  mctp-i2c-ctrl.service  mctp-i2c-demux.service  mctp-i2c-demux.socket  mctp-pcie-ctrl.service  mctp-pcie-demux.service  mctp-pcie-demux.socket  mctp-spi-ctrl.service  mctp-spi-demux.service  mctp-spi-demux.socket  mctp-usb-ctrl.service  mctp-usb-demux.service  mctp-usb-demux.socket
tests/: meson.build  test_astlpc.c  test_cmds.c  test_core.c  test_eid.c  test_seq.c  test_serial.c
tests/drivers/: readme.md
tests/drivers/aspeed_mctp/: Makefile  aspeed_mctp.c  meson.build
tests/drivers/smbus/: Makefile  meson.build  smbus_mock.c
tests/drivers/spidev/: Makefile  gpiolib-sysfs.c  meson.build  mtd.c  spidev.c
tests/mctp-fuzzer/: 00-projdefs.sh  01-common.sh  02-projdefs-ctrl.sh  04-projdefs-drivers.sh  05-verify-mocked-drivers.sh  09-remove-mocked-drivers.sh  11-build-docker.sh  12-run-console.sh  13-build-docker-drivers.sh  14-run-console-for-drivers-as-root.sh  21-build-ctrl-fuzzer.sh  22-run-ctrl-fuzzer.sh  30-build-mocked-drivers.sh  readme.md
utils/: mctp-astlpc-daemon.c  mctp-capture.c  mctp-capture.h  mctp-demux-daemon.c  mctp-in.c  mctp-pipe.c  mctp-tun.c  meson.build
vdm/nvidia/: README  libmctp-vdm-cmds.h  mctp-vdm-commands.c  mctp-vdm-commands.h  mctp-vdm-connect.c  mctp-vdm-encode.c  mctp-vdm-nvda.c  mctp-vdm-nvda.h  meson.build
