option('oe-sdk', type: 'feature', description: 'Enable OE SDK')
option('capture', type: 'feature', description: 'Enable PCAP capture', value: 'disabled')
option('tests', type: 'feature', description: 'Build tests', value: 'enabled')
option(
    'mctp-batch-tx',
    type: 'feature',
    value: 'disabled',
    description: '''Enable multiple MCTP packets to be transferred in a single
                    transaction of the binding. Currently only supported for USB.'''
)
