option('oe-sdk', type: 'feature', description: 'Enable OE SDK')
option('capture', type: 'feature', description: 'Enable PCAP capture', value: 'disabled')
option('tests', type: 'feature', description: 'Build tests', value: 'enabled')
option(
    'mctp-batch-tx',
    type: 'feature',
    value: 'disabled',
    description: '''Enable multiple MCTP packets to be transferred in a single
                    transaction of the binding. Currently only supported for USB.'''
)
option(
    'enable-usb',
    type: 'feature',
    value: 'disabled',
    description: '''Enable MCTPoUSB functionality. Also required libmctp dependency during runtime.'''
)
option(
    'enable-mockup-endpoint',
    type: 'feature',
    value: 'disabled',
    description: '''Enable Mockup Endpoint..'''
)
option('enable-fuzzctrl', type: 'feature', description: 'Fuzz tests for MCTP control demon', value: 'disabled')
