option('oe-sdk', type: 'feature', description: 'Enable OE SDK')
option('capture', type: 'feature', description: 'Enable PCAP capture', value: 'disabled')
option('tests', type: 'feature', description: 'Build tests', value: 'enabled')
option(
    'mctp-batch-tx',
    type: 'feature',
    value: 'disabled',
    description: '''Enable multiple MCTP packets to be transferred in a single
                    transaction of the binding. Currently only supported for USB.'''
)
option(
    'enable-usb',
    type: 'feature',
    value: 'disabled',
    description: '''Enable MCTPoUSB functionality. Also required libmctp dependency during runtime.'''
)
option(
    'enable-mockup-endpoint',
    type: 'feature',
    value: 'disabled',
    description: '''Enable Mockup Endpoint..'''
)
option(
    'enable-mctp-tun',
    type: 'feature',
    value: 'disabled',
    description: '''Enable mctp-tun as the binding layer communicating with physical devices.'''
)
option(
    'mctp-in-kernel-enable',
    type: 'feature',
    value: 'disabled',
    description: 'Enable the in kernel MCTP stack and disable the demux daemon communication')
option('enable-fuzzctrl', type: 'feature', description: 'Fuzz tests for MCTP control demon', value: 'disabled')
option('mocked-drivers', type: 'feature', description: 'Use mocked drivers - for UT or Fuzz tests purposes only', value: 'disabled')
